--- a/News_Section/bao_quan.html
+++ b/News_Section/bao_quan.html
@@ -7,7 +7,7 @@
 
     <link
       rel="stylesheet"
-      href="../bootstrap-4.6.2-dist/css/bootstrap.min.css.map"
+      href="../bootstrap-4.6.2-dist/css/bootstrap.min.css"
       crossorigin="anonymous"
     />
     <link
