--- a/gioithieu.html
+++ b/gioithieu.html
@@ -244,6 +244,9 @@ a {
    RESPONSIVE
    ========================= */
 @media (max-width: 767.98px) {
+  .search-bar {
+    display: none !important;
+  }
 
   .mid-header .header-main {
     display: grid;
