--- a/Admin/products.html
+++ b/Admin/products.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../fontawesome-free-6.7.2-web/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="../fontawesome-free-6.7.2-web/css/all.min.css"
+    />
     <!-- GUARD -->
     <script>
       (function () {
@@ -26,7 +29,7 @@
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      href="../fontawesome-free-6.7.2-web/css/all.min.css"
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
@@ -239,6 +242,13 @@
             <a href="./products.html">
               <span class="icon"><i class="fa-solid fa-tags"></i></span>
               <span class="title">Quản lý sản phẩm</span>
+            </a>
+          </li>
+
+          <li id="nav-pricing">
+            <a href="./pricing.html">
+              <span class="icon"><i class="fa-solid fa-dollar-sign"></i></span>
+              <span class="title">Quản lý giá bán</span>
             </a>
           </li>
 
@@ -500,7 +510,7 @@
       });
 
       // Cho products.js mở form khi click "Sửa"
-      window.AdminProductDrawer = { open: openDrawer, close: closeDrawer };      
+      window.AdminProductDrawer = { open: openDrawer, close: closeDrawer };
     </script>
   </body>
 </html>
