--- a/Admin/inventory.html
+++ b/Admin/inventory.html
@@ -203,6 +203,13 @@
             </a>
           </li>
 
+          <li id="nav-pricing">
+            <a href="./pricing.html">
+              <span class="icon"><i class="fa-solid fa-dollar-sign"></i></span>
+              <span class="title">Quản lý giá bán</span>
+            </a>
+          </li>
+
           <li id="nav-imports">
             <a href="./imports.html">
               <span class="icon"><i class="fa-solid fa-box-open"></i></span>
@@ -212,7 +219,9 @@
 
           <li id="nav-inventory" class="hovered">
             <a href="./inventory.html">
-              <span class="icon"><i class="fa-solid fa-boxes-stacked"></i></span>
+              <span class="icon"
+                ><i class="fa-solid fa-boxes-stacked"></i
+              ></span>
               <span class="title">Quản lý hàng tồn kho</span>
             </a>
           </li>
