--- a/Admin/imports.html
+++ b/Admin/imports.html
@@ -321,13 +321,88 @@
                 </tr>
               </thead>
               <tbody id="rcp-body">
+                <!-- DỮ LIỆU MẪU TĨNH (fallback khi JS/localStorage lỗi) -->
                 <tr>
-                  <td
-                    colspan="8"
-                    style="text-align: center; color: #9aa3ad; padding: 20px"
-                  >
-                    Đang tải…
-                  </td>
+                  <td><b>PN-20251028-001</b></td>
+                  <td>2025-10-28</td>
+                  <td>SP001 – Gôm xịt tóc Davines Extra Strong Hairspray</td>
+                  <td>Davines</td>
+                  <td class="num">30</td>
+                  <td class="num">5.400.000</td>
+                  <td>completed</td>
+                  <td>—</td>
+                </tr>
+                <tr>
+                  <td><b>PN-20251028-002</b></td>
+                  <td>2025-10-28</td>
+                  <td>SP002 – Gôm xịt tóc TIGI Bed Head Masterpiece</td>
+                  <td>TIGI</td>
+                  <td class="num">20</td>
+                  <td class="num">3.400.000</td>
+                  <td>completed</td>
+                  <td>—</td>
+                </tr>
+                <tr>
+                  <td><b>PN-20251028-003</b></td>
+                  <td>2025-10-28</td>
+                  <td>SP003 – Sáp vuốt tóc Kevin Murphy Free Hold</td>
+                  <td>Kevin Murphy</td>
+                  <td class="num">15</td>
+                  <td class="num">4.200.000</td>
+                  <td>completed</td>
+                  <td>—</td>
+                </tr>
+
+                <tr>
+                  <td><b>PN-20251030-004</b></td>
+                  <td>2025-10-30</td>
+                  <td>SP004 – Keo xịt tóc Butterfly Shadow Super Hard</td>
+                  <td>Butterfly Shadow</td>
+                  <td class="num">40</td>
+                  <td class="num">3.600.000</td>
+                  <td>completed</td>
+                  <td>—</td>
+                </tr>
+                <tr>
+                  <td><b>PN-20251030-005</b></td>
+                  <td>2025-10-30</td>
+                  <td>SP005 – Sáp Luxurious Clay Wax</td>
+                  <td>Luxurious</td>
+                  <td class="num">25</td>
+                  <td class="num">3.000.000</td>
+                  <td>completed</td>
+                  <td>—</td>
+                </tr>
+                <tr>
+                  <td><b>PN-20251030-006</b></td>
+                  <td>2025-10-30</td>
+                  <td>SP006 – Sáp Apestomen Nitro Wax</td>
+                  <td>Apestomen</td>
+                  <td class="num">18</td>
+                  <td class="num">1.980.000</td>
+                  <td>completed</td>
+                  <td>—</td>
+                </tr>
+
+                <tr>
+                  <td><b>PN-20251101-007</b></td>
+                  <td>2025-11-01</td>
+                  <td>SP007 – Sáp Hanz de Fuko Claymation</td>
+                  <td>Hanz de Fuko</td>
+                  <td class="num">12</td>
+                  <td class="num">3.120.000</td>
+                  <td>completed</td>
+                  <td>—</td>
+                </tr>
+                <tr>
+                  <td><b>PN-20251101-008</b></td>
+                  <td>2025-11-01</td>
+                  <td>SP008 – Sáp vuốt tóc Davines Strong Hold Cream</td>
+                  <td>Davines</td>
+                  <td class="num">14</td>
+                  <td class="num">3.220.000</td>
+                  <td>completed</td>
+                  <td>—</td>
                 </tr>
               </tbody>
             </table>
